--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "graphql-request": "^1.4.1",
     "install": "^0.10.4",
+    "moment": "^2.20.1",
     "npm": "^5.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
